--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -16,10 +16,10 @@
       <td>Category</td>
       <td>
         <select name = "transaction[category]">
-          <option name = "1">Food</option>
-          <option name = "2">Grocery</option>
-          <option name = "3">Travelling</option>
-          <option name = "4">Other</option>
+          <option value = "1">Food</option>
+          <option value = "2">Grocery</option>
+          <option value = "3">Travelling</option>
+          <option value = "4">Other</option>
       </td>
   </table>
   <%= form.submit %>
