--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+
 <h1>User Profile</h1>
 <ul>
   <li><strong>Name: </strong><%= @user.first_name + @user.last_name %></li>
@@ -6,5 +7,5 @@
 </ul>
 
 <%= link_to('New Transcation', new_user_transaction_path(@user)) %>
-<%= link_to('Show Transcation', user_transaction_path(@transaction)) if @transaction != nil %>
+<%= link_to('Show Transcation',  user_transaction_path(@user)) if @transaction != nil %>
 <%= link_to('Back', users_path) %>
