--- a/app/views/transactions/filters.html.erb
+++ b/app/views/transactions/filters.html.erb
@@ -1,3 +1,4 @@
+<%= form_with scope: :transaction, url: user_transaction_path(user), local: true do |form| %>
 <center>
 <h3>Select Filter</h3>
 <table border = '1'>
@@ -47,3 +48,4 @@
   </tr>
 </table><br><br>
 <input type = "submit" value = "Show transactions">
+<% end %>
