--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,10 +1,10 @@
 <center>
  <%= form_with scope: :transaction, url: user_transaction_path(@user), method: :get, local: true do |form| %>
 <h3>Select Filter</h3>
-<table border = '1'>
+<table class="table table-bordered">
  <tr>
    <td>
-     <table>
+     <table class="table table-bordered">
      <tr>
        <td>
          <%= radio_button_tag(:filter_option, "by_date") %>
@@ -22,7 +22,7 @@
    </table>
    </td>
    <td>
-     <table>
+     <table class="table table-bordered">
        <tr>
          <td>
            <%= radio_button_tag(:filter_option, "by_month") %>
@@ -32,13 +32,13 @@
        <tr>
          <td>Select Month</td>
          <td>
-           <%= select_tag(:month_id, options_for_select(1..12)) %>
+           <%= select_tag(:month_id, options_for_select(1..12), class: "form-control") %>
          </td>
        </tr>
      </table>
    </td>
    <td>
-     <table>
+     <table class="table table-bordered">
        <tr>
          <td>
            <%= radio_button_tag(:filter_option, "by_category") %>
@@ -48,22 +48,24 @@
        <tr>
          <td>Select Category</td>
          <td>
-           <%= select_tag(:category_id, options_from_collection_for_select(@categories, "id", "name")) %>
+           <%= select_tag(:category_id, options_from_collection_for_select(@categories, "id", "name"), class: "form-control") %>
          </td>
        </tr>
      </table>
    </td>
  </tr>
-</table><br><br>
-<%= form.submit :Submit %>
+</table><br>
+<%= form.submit :Submit, class: 'btn btn-primary'%>
+<br><br>
 <% end %>
 <% if params[:commit] != nil %>
   <h1>Transcation History</h1>
-    <table border>
+    <table class="table table-striped table-bordered">
       <tr>
         <th>Transcation Type</th>
         <th>Amount</th>
         <th>Current Balance</th>
+        <th>Category</th>
         <th>Time</th>
       </tr>
       <strong>Name: <%= @user.first_name + ' ' + @user.last_name %></strong><br><br>
@@ -72,9 +74,10 @@
           <td align="center"><%= transaction.transaction_type %></td>
           <td align="center"><%= transaction.amount %></td>
           <td align="center"><%= transaction.balance %></td>
+          <td align="center"><%= transaction.category.name %></td>
           <td align="center"><%= transaction.created_at %></td>
         </tr>
       <% end %>
     </table>
-    <%= link_to('Back', user_path(@user)) %>
+    <%= link_to('Back', user_path(@user), class: 'btn btn-primary') %>
 <% end %>
