--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,11 @@
-<h1>Users List</h1>
-<%= link_to('Register Here', new_user_path) %>
-<ul>
-  <% @users.each do |user| %>
-    <li>
-    <%= link_to(user.first_name + ' ' + user.last_name, user_path(user))%>
-  </li>
-  <% end %>
-</ul>
+<div class="container-fluid">
+  <h1><strong>Users List</strong></h1>
+  <%= link_to('Register Here', new_user_path, class: 'btn btn-primary') %><br><br>
+  <ul class="list-group">
+    <% @users.each do |user| %>
+      <li class="list-group-item">
+      <%= link_to(user.first_name + ' ' + user.last_name, user_path(user))%>
+    </li>
+    <% end %>
+  </ul>
+</div>
