--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,36 +1,38 @@
-<h1>Register Here</h1>
-<%= form_with scope: :user, url: users_path, local: true do |form| %>
+<div class="container-fluid">
+  <h1><strong>Register Here</strong></h1>
+  <%= form_with scope: :user, url: users_path, local: true do |form| %>
 
-  <% if @user.errors.any? %>
-    <div>
-      <h2>
-        <%= pluralize(@user.errors.count, 'error') %> prohibited this user from being registered:
-      </h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li> <%= message %> </li>
-        <% end %>
-      </ul>
-    </div>
+    <% if @user.errors.any? %>
+      <div>
+        <h2>
+          <%= pluralize(@user.errors.count, 'error') %> prohibited this user from being registered:
+        </h2>
+        <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li> <%= message %> </li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <p >
+      <%= form.label :first_name %><br>
+      <%= form.text_field :first_name %>
+    </p>
+    <p>
+      <%= form.label :last_name %><br>
+      <%= form.text_field :last_name %>
+    </p>
+    <p>
+      <%= form.label :email %><br>
+      <%= form.text_field :email %>
+    </p>
+    <p>
+      <%= form.label :password %><br>
+      <%= form.password_field :password %>
+    </p>
+    <p>
+      <%= form.submit :Submit , class: 'btn btn-primary' %>
+    </p>
   <% end %>
-
-  <p>
-    <%= form.label :first_name %><br>
-    <%= form.text_field :first_name %>
-  </p>
-  <p>
-    <%= form.label :last_name %><br>
-    <%= form.text_field :last_name %>
-  </p>
-  <p>
-    <%= form.label :email %><br>
-    <%= form.text_field :email %>
-  </p>
-  <p>
-    <%= form.label :password %><br>
-    <%= form.password_field :password %>
-  </p>
-  <p>
-    <%= form.submit :Submit%>
-  </p>
-<% end %>
+</div>
