--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -74,7 +74,13 @@
           <td align="center"><%= transaction.transaction_type %></td>
           <td align="center"><%= transaction.amount %></td>
           <td align="center"><%= transaction.balance %></td>
-          <td align="center"><%= transaction.category.name %></td>
+          <td align="center">
+            <% if transaction.category_id.present? == true %>
+              <%= transaction.category.name %>
+            <% else %>
+              <%= "N/A" %>
+            <% end %>
+          </td>
           <td align="center"><%= transaction.created_at %></td>
         </tr>
       <% end %>
