--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <h1><strong>User Profile</strong></h1>
   <ul class="list-group">
-    <li class="list-group-item"><strong>Name: </strong><%= @user.first_name + @user.last_name %></li>
+    <li class="list-group-item"><strong>Name: </strong><%= @user.first_name + ' ' + @user.last_name %></li>
     <li class="list-group-item"><strong>Email: </strong><%= @user.email%></li>
     <li class="list-group-item"><strong>Balance: </strong><%= @user.balance%></li>
   </ul>
